# syncre

./: .gitignore  Cargo.toml  README.md
syncre-lib/: Cargo.toml
syncre-lib/src/: algorithm.rs  archive.rs  lib.rs  tests.rs
syncre_lib/: Cargo.toml  testing0.txt
syncre_lib/src/: algorithm.rs  archive.rs  lib.rs  tests.rs
syncre_lib/testfiles/: hello-link-windows.txt  link-hello.txt
syncre_lib/testfiles/linked/: hello-link.txt  hello-windows.txt
