[package]
name = "syncre_lib"
version = "0.1.0"
authors = ["kedap <kedap.dev@protonmail.com>", "saibatizoku <casabenita7@gmail.com>"]
edition = "2018"
description = "Librery for Sync Re-liable"
repository = "https://github.com/Kedap/syncre"
license = "GPL-3.0-or-later"
keywords = ["rsync", "archive"]

[dependencies]
block-padding = "0.2.1"
bytes = "1.0.1"
copy_dir = "0.1.2"
md4 = "0.9.0"
testdir = "0.4.0"
